--- a/styles/style.scss
+++ b/styles/style.scss
@@ -2,6 +2,7 @@
 @import "../partials/variables";
 @import "../partials/header";
 @import "../partials/blog";
+@import "../partials/contact";
 
 // font-family: 'Roboto', sans-serif;
 // font-family: 'Walter Turncoat', cursive;
