--- a/partials/_contact.scss
+++ b/partials/_contact.scss
@@ -185,11 +185,13 @@
                 @include pStyles;
                 margin-bottom: 5%;
                 resize: none;
+                padding-left: 2%;
+                padding-top: 2%;
             }
 
             textarea::placeholder {
-                padding-left: 2%;
-                padding-top: 2%;
+                // padding-left: 2%;
+                // padding-top: 2%;
                 color: $textColor;
             }
 
