--- a/styles/style.css
+++ b/styles/style.css
@@ -261,7 +261,7 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
 .mainHeader .mainWrapper .headerImg {
   width: auto;
   margin-top: 20%;
-  margin-right: -5.5%;
+  margin-right: -12.5%;
 }
 
 .blogHeader {
@@ -612,29 +612,23 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   line-height: 28px;
   margin-bottom: 5%;
   resize: none;
+  padding-left: 2%;
+  padding-top: 2%;
 }
 
 .commentsSection form textarea::-webkit-input-placeholder {
-  padding-left: 2%;
-  padding-top: 2%;
   color: #f3faff;
 }
 
 .commentsSection form textarea:-ms-input-placeholder {
-  padding-left: 2%;
-  padding-top: 2%;
   color: #f3faff;
 }
 
 .commentsSection form textarea::-ms-input-placeholder {
-  padding-left: 2%;
-  padding-top: 2%;
   color: #f3faff;
 }
 
 .commentsSection form textarea::placeholder {
-  padding-left: 2%;
-  padding-top: 2%;
   color: #f3faff;
 }
 
@@ -906,29 +900,23 @@ footer {
   line-height: 28px;
   margin-bottom: 5%;
   resize: none;
+  padding-left: 2%;
+  padding-top: 2%;
 }
 
 .contactSection .contactForm form textarea::-webkit-input-placeholder {
-  padding-left: 2%;
-  padding-top: 2%;
   color: #f3faff;
 }
 
 .contactSection .contactForm form textarea:-ms-input-placeholder {
-  padding-left: 2%;
-  padding-top: 2%;
   color: #f3faff;
 }
 
 .contactSection .contactForm form textarea::-ms-input-placeholder {
-  padding-left: 2%;
-  padding-top: 2%;
   color: #f3faff;
 }
 
 .contactSection .contactForm form textarea::placeholder {
-  padding-left: 2%;
-  padding-top: 2%;
   color: #f3faff;
 }
 
@@ -1021,29 +1009,20 @@ button {
           align-items: flex-start;
 }
 
+.fourLinks .mainWrapper .fourLinksContainer .fourLinksText span {
+  margin-top: 3%;
+}
+
 .fourLinks .mainWrapper .fourLinksContainer .fourLinksText i {
-  font-size: 32px;
-  border-radius: 50%;
-  background-color: #08fded;
-  padding: 2%;
   color: #474bb5;
-  margin-top: 4%;
 }
 
-.fourLinks .mainWrapper .fourLinksContainer .fourLinksText .fa-users {
-  padding: 3% 2.5%;
-  font-size: 24px;
-}
-
-.fourLinks .mainWrapper .fourLinksContainer .fourLinksText .fa-file {
-  padding: 2% 3%;
-}
-
-.fourLinks .mainWrapper .fourLinksContainer .fourLinksText .fa-phone {
-  font-size: 24px;
+.fourLinks .mainWrapper .fourLinksContainer .fourLinksText .icon-background {
+  color: #08fded;
 }
 
 .fourLinks .mainWrapper .fourLinksContainer .fourLinksText .fourLinksTitle {
+  width: 80%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
