--- a/partials/_blog.scss
+++ b/partials/_blog.scss
@@ -84,11 +84,13 @@
 
         .blogAside {
             width: 28%;
+            height: 100%;
             display: flex;
             flex-direction: column;
             background-color: $secondaryColor;
-            margin-bottom: 15%;
+            // margin-bottom: 15%;
             margin-left: 5%;
+            padding-bottom: 1%;
 
             .asideImg {
                 margin-left: -18%;
@@ -118,11 +120,24 @@
                    @include pStyles;
                 }
 
-                // li {
-                //     // list-style-type: circle;
-                //     // list-style-position: inside;
-                //     // padding-left: 5%;
-                // }
+                li {
+                    // list-style-type: circle;
+                    // list-style-position: inside;
+                    padding-left: 7%;
+                    position: relative;
+                }
+
+                li::before {
+                    content: "";
+                    width: 5px;
+                    height: 5px;
+                    border-radius: 50%;
+                    background-color: $accentColor;
+                    display: block;
+                    position: absolute;
+                    top: 40%;
+                    left: 0;
+                }
             }
         }
 
@@ -134,7 +149,7 @@
 
             .activitiesImg {
                 margin-right: -9%;
-                box-shadow: -15px 15px 0 1px rgba(8, 253, 237, 1);
+                box-shadow: -15px 15px 0 1px rgb(8, 253, 237);
                 margin-right: 0%;
                 margin-left: 30px;
             }
