--- a/partials/_contact.scss
+++ b/partials/_contact.scss
@@ -63,6 +63,7 @@
                     font-family: 'Walter Turncoat', cursive;
                     padding-top: 5%;
                     white-space: nowrap;
+                    text-align: center;
                 }
             }
         }
@@ -90,6 +91,7 @@
             flex-direction: column;
             align-items: center;
             // border: 2px solid hotpink;
+
 
             .contactIcons {
                 // border: 2px solid coral;
@@ -210,4 +212,97 @@ footer {
     text-align: center;
     @include pStyles;
     padding: 10px 0;
+}
+
+@media (max-width: 1020px) {
+    .contactHeader {
+        .mainWrapper {
+            .contactContent {
+                .contactHeaderNav {
+                    ul {
+                        width: 100%;
+                    }
+                }
+            }
+        }
+    } 
+
+    .contactSection {
+        .contactContainer {
+            .contactInfo {
+                .contactIcons {
+                    width: 100%;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 820px) {
+    .contactHeader {
+        .mainWrapper {
+            .contactContent {
+                .contactHeaderTitle {
+                    h1 {
+                        font-size: 100px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .contactHeader {
+        .mainWrapper {
+            .contactContent {
+                width: 100%;
+                .contactHeaderNav {
+                    ul {
+                        width: 100%;
+                    }
+                }
+
+                .contactHeaderTitle {
+                    h1 {
+                        white-space: initial;
+                        // text-align: center;
+                    }
+                }
+            }
+        }
+    }
+
+    .contactSection {
+        flex-direction: column;
+        align-items: center;
+
+        .contactContainer {
+            width: 80%;
+            .contactInfo {
+                width: 100%;
+                // align-items: center;
+                justify-content: center;
+                text-align: center;
+
+                .contactIcons {
+                    width: 80%;
+                    // text-align: center;
+                    margin: 5% auto;
+                }
+            }
+        }
+
+        .contactForm {
+            width: 80%;
+            
+            form {
+                // margin-right: 0;
+                // margin-bottom: 0;
+                // margin-top: 0;
+                // margin-left: 0;
+                margin: 0;
+            }
+        }
+    }
 }
