--- a/styles/style.scss
+++ b/styles/style.scss
@@ -35,7 +35,7 @@ button {
     line-height: 41.6px;
     text-align: center;
     padding: 10px 15px;
-    width: 34%;
+    // width: 34%;
     white-space: nowrap;
     color: $secondaryColor;
 }
@@ -226,11 +226,6 @@ button {
                 @include pStyles;
                 padding: 5% 0;
             }
-
-            button {
-                width: 25%;
-            }
-
         }
     }
 }
@@ -262,6 +257,7 @@ button {
             width: 60%;
             display: flex;
             flex-direction: column;
+            align-items: flex-start;
             color: $textColor;
 
             h2 {
@@ -272,10 +268,6 @@ button {
             p {
                 @include pStyles;
                 padding: 5% 0;
-            }
-
-            button {
-                width: 30%;
             }
         }
     }
@@ -312,6 +304,14 @@ footer {
     padding: 10px 0;
 }
 
+// @media (min-width: 1600px) {
+//     .mainWrapper {
+//       max-width: 1600px;
+//     }
+
+
 // challenge pushing image out of container. Solved by removing width: 50% from its parent. width 50% for its sibling is enough.
+
+// challenge resizing the offset images, especially the header
 
 // change assets names
